# symora

./: .clippy.toml  .gitignore  CLAUDE.md  Cargo.toml  README.en.md  README.md  rustfmt.toml
.claude/skills/symora/: SKILL.md
.github/workflows/: ci.yml  release.yml
scripts/: install.sh  uninstall.sh
src/: app.rs  config.rs  error.rs  lib.rs  main.rs
src/cli/: location.rs  mod.rs  output.rs  response.rs
src/cli/commands/: actions.rs  batch.rs  calls.rs  config.rs  daemon.rs  diagnostics.rs  doctor.rs  edit.rs  find.rs  hover.rs  impact.rs  init.rs  mod.rs  rename.rs  search.rs  signature.rs  status.rs
src/daemon/: client.rs  dto.rs  handlers.rs  mod.rs  protocol.rs  server.rs
src/infra/: file_filter.rs  mod.rs  retry.rs
src/infra/ast/: mod.rs  node_types.rs
src/infra/lsp/: capabilities.rs  client.rs  health.rs  init_options.rs  manager.rs  mod.rs  protocol.rs  servers.rs  transport.rs
src/models/: config.rs  diagnostic.rs  lsp.rs  mod.rs  symbol.rs
src/services/: ast_query.rs  config.rs  daemon_lsp.rs  mod.rs  project.rs
src/services/lsp/: cache.rs  converters.rs  helpers.rs  mod.rs  service.rs
